
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphmae-self-supervised-graph-lab"
version = "0.1.0"
description = "Create a self-supervised graph lab for pretraining, downstream transfer, and graph representation analysis with polished demos."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
